Add CI and lerna (#4)
* Add CI and lerna

* Move eslint config to package.json

--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -24,7 +24,7 @@
       "lint-staged": "^8.1.0",
       "mocha": "^6.2.0",
       "nyc": "^14.1.1",
-      "prettier": "^1.15.2",
+      "prettier": "^1.15.2"
     },
     "publishConfig": {
       "registry": "https://nexus.soma.salesforce.com/nexus/content/repositories/npmjs-internal/"
