--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -29,6 +29,12 @@
     "eslint-config-prettier": "^3.3.0",
     "eslint-config-xo": "^0.25.0",
     "eslint-plugin-prettier": "^3.1.0",
+    "webapi-parser": "^0.3.0",
+    "handlebars": "^4.3.1",
+    "lodash": "^4.17.15",
+    "path": "^0.12.7",
+    "promise": "^8.0.3",
+    "url-parse": "^1.4.7",
     "fetch-mock": "^7.3.9",
     "lint-staged": "^8.1.0",
     "mocha": "^6.2.0",
