--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "xo": "^0.25.3"
   },
   "nyc": {
+    "exclude": [
+      "babel.config.js",
+      "**/pkg"
+    ],
     "all": true,
     "check-coverage": true,
     "branches": 80,
@@ -46,7 +50,8 @@
     ],
     "env": {
       "jest": true,
-      "node": true
+      "node": true,
+      "es6": true
     },
     "rules": {
       "prettier/prettier": "error"
