--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -5,9 +5,14 @@
   "main": "index.js",
   "scripts": {
     "pretest": "eslint .",
-    "test": "nyc --reporter=text mocha --require @babel/register --exit"
+    "test": "nyc --reporter=text mocha --require @babel/register --exit",
+    "start": "babel-node src/index.js"
   },
   "nyc": {
+    "exclude": [
+      "**/pkg",
+      "./src/core/index.js"
+    ],
     "all": true,
     "check-coverage": true,
     "branches": 80,
@@ -24,24 +29,27 @@
     "@babel/register": "^7.6.2",
     "@istanbuljs/nyc-config-babel": "^2.1.1",
     "babel-plugin-istanbul": "^5.2.0",
+    "babel-plugin-rewire": "^1.2.0",
     "chai": "^4.2.0",
-    "eslint": "^5.16.0",
+    "chai-files": "^1.4.0",
+    "eslint": "^6.4.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-config-xo": "^0.25.0",
     "eslint-plugin-prettier": "^3.1.0",
-    "webapi-parser": "^0.3.0",
-    "handlebars": "^4.3.1",
-    "lodash": "^4.17.15",
-    "path": "^0.12.7",
-    "promise": "^8.0.3",
-    "url-parse": "^1.4.7",
     "fetch-mock": "^7.3.9",
+    "handlebars": "^4.3.1",
     "lint-staged": "^8.1.0",
+    "lodash": "^4.17.15",
     "mocha": "^6.2.0",
     "nodemon": "^1.19.2",
     "nyc": "^14.1.1",
+    "path": "^0.12.7",
     "prettier": "^1.15.2",
-    "sinon": "^7.5.0"
+    "promise": "^8.0.3",
+    "sinon": "^7.5.0",
+    "tmp": "^0.1.0",
+    "url-parse": "^1.4.7",
+    "webapi-parser": "^0.3.0"
   },
   "publishConfig": {
     "registry": "https://nexus.soma.salesforce.com/nexus/content/repositories/npmjs-internal/"
