--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lerna": "^3.16.4",
     "nyc": "^14.1.1",
     "prettier": "^1.15.2",
+    "webapi-parser": "^0.3.1",
     "xo": "^0.25.3"
   },
   "nyc": {
