--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -38,7 +38,10 @@
     "nyc": "^14.1.1",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3",
-    "webapi-parser": "^0.3.1"
+    "webapi-parser": "^0.3.1",
+    "chai-string": "^1.5.0",
+    "handlebars-helpers": "^0.10.0",
+    "qs": "^6.9.0"
   },
   "publishConfig": {
     "registry": "https://nexus.soma.salesforce.com/nexus/content/repositories/npmjs-internal/"
