--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -4,17 +4,30 @@
   "description": "Commerce SDK Generator, contains the templates to generate the SDK",
   "main": "index.js",
   "scripts": {
-    "test": "cross-env TS_NODE_FILES=true mocha --exit --require ts-node/register --colors test/**/*.ts",
+    "pretest": "npm run lint",
+    "test": "nyc cross-env TS_NODE_FILES=true mocha --exit --require ts-node/register --colors test/**/*.ts",
     "start": "node dist/index.js",
     "clean": "gulp clean",
     "build": "gulp buildInt && gulp buildSdk",
-    "lint": "tsc && eslint \"**/*.{js,ts}\" --quiet --fix",
-    "coverage": "nyc npm run test"
+    "lint": "eslint \"**/*.{js,ts}\" --quiet --fix"
   },
   "nyc": {
     "exclude": [
-      "**/pkg",
-      "./src/core/index.js"
+      "tmp-dist",
+      "coverage",
+      "dist",
+      "test",
+      "gulpfile.ts",
+      "src/core/index.ts",
+      "src/utils/renderer.ts"
+    ],
+    "reporter": [
+      "html",
+      "text",
+      "json"
+    ],
+    "extension": [
+      ".ts"
     ],
     "all": true,
     "check-coverage": true,
@@ -24,21 +37,36 @@
     "statements": -10
   },
   "devDependencies": {
-    "@types/chai": "^4.1.7",
+    "@types/chai": "^4.2.3",
+    "@types/fancy-log": "^1.3.1",
+    "@types/fs-extra": "^8.0.0",
+    "@types/gulp": "^4.0.6",
+    "@types/handlebars-helpers": "^0.5.2",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.6.9",
+    "@types/node-fetch": "^2.5.2",
+    "@types/tmp": "^0.1.0",
+    "@typescript-eslint/eslint-plugin": "^2.3.2",
+    "@typescript-eslint/parser": "^2.3.2",
     "chai": "^4.2.0",
     "cross-env": "^5.2.0",
     "del": "^5.1.0",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-config-xo": "^0.27.1",
+    "eslint-config-xo-typescript": "^0.19.0",
+    "fancy-log": "^1.3.3",
     "fetch-mock": "^7.4.0",
     "gulp": "^4.0.2",
     "gulp-typescript": "^5.0.1",
+    "handlebars-helpers": "^0.10.0",
     "mocha": "^6.2.0",
     "node-fetch": "^2.6.0",
     "nyc": "^14.1.1",
+    "tmp": "^0.1.0",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3",
     "webapi-parser": "^0.3.1",
+    "xo": "^0.25.3",
     "chai-string": "^1.5.0",
     "handlebars-helpers": "^0.10.0",
     "qs": "^6.9.0"
@@ -53,18 +81,31 @@
     ]
   },
   "eslintConfig": {
+    "parser": "@typescript-eslint/parser",
     "extends": [
-      "xo",
-      "prettier"
+      "plugin:@typescript-eslint/recommended",
+      "prettier/@typescript-eslint",
+      "plugin:prettier/recommended"
     ],
-    "rules": {
-      "prettier/prettier": "error"
-    },
     "plugins": [
-      "prettier"
-    ]
+      "@typescript-eslint"
+    ],
+    "parserOptions": {
+      "ecmaVersion": 2018,
+      "sourceType": "module"
+    },
+    "rules": {
+      "@typescript-eslint/interface-name-prefix": [
+        "error",
+        {
+          "prefixWithI": "always"
+        }
+      ]
+    }
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {}
+  "dependencies": {
+    "remap-istanbul": "^0.13.0"
+  }
 }
