--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -48,7 +48,9 @@
     "@types/tmp": "^0.1.0",
     "@typescript-eslint/eslint-plugin": "^2.3.2",
     "@typescript-eslint/parser": "^2.3.2",
+    "amf-client-js": "^3.5.4",
     "chai": "^4.2.0",
+    "chai-string": "^1.5.0",
     "cross-env": "^5.2.0",
     "del": "^5.1.0",
     "eslint-config-prettier": "^6.4.0",
@@ -62,14 +64,12 @@
     "mocha": "^6.2.0",
     "node-fetch": "^2.6.0",
     "nyc": "^14.1.1",
+    "qs": "^6.9.0",
     "tmp": "^0.1.0",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3",
     "webapi-parser": "^0.3.1",
-    "xo": "^0.25.3",
-    "chai-string": "^1.5.0",
-    "handlebars-helpers": "^0.10.0",
-    "qs": "^6.9.0"
+    "xo": "^0.25.3"
   },
   "publishConfig": {
     "registry": "https://nexus.soma.salesforce.com/nexus/content/repositories/npmjs-internal/"
