--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -8,7 +8,7 @@
     "test": "nyc cross-env TS_NODE_FILES=true mocha --exit --require ts-node/register --colors test/**/*.ts",
     "start": "node dist/index.js",
     "clean": "gulp clean",
-    "build": "gulp buildInt && gulp buildSdk",
+    "build": "gulp",
     "lint": "eslint \"**/*.{js,ts}\" --quiet --fix"
   },
   "nyc": {
@@ -58,6 +58,7 @@
     "eslint-config-xo-typescript": "^0.19.0",
     "fancy-log": "^1.3.3",
     "fetch-mock": "^7.4.0",
+    "fs-extra": "^8.1.0",
     "gulp": "^4.0.2",
     "gulp-typescript": "^5.0.1",
     "handlebars-helpers": "^0.10.0",
