--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -13,9 +13,8 @@
   },
   "nyc": {
     "exclude": [
-      "tmp-dist",
+      "release",
       "coverage",
-      "dist",
       "test",
       "gulpfile.ts",
       "src/core/index.ts",
@@ -41,10 +40,12 @@
     "@types/fancy-log": "^1.3.1",
     "@types/fs-extra": "^8.0.0",
     "@types/gulp": "^4.0.6",
+    "@types/gulp-debug": "^2.0.31",
     "@types/handlebars-helpers": "^0.5.2",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.6.9",
     "@types/node-fetch": "^2.5.2",
+    "@types/qs": "^6.5.3",
     "@types/tmp": "^0.1.0",
     "@typescript-eslint/eslint-plugin": "^2.3.2",
     "@typescript-eslint/parser": "^2.3.2",
@@ -60,7 +61,9 @@
     "fetch-mock": "^7.4.0",
     "fs-extra": "^8.1.0",
     "gulp": "^4.0.2",
+    "gulp-debug": "^4.0.0",
     "gulp-typescript": "^5.0.1",
+    "handlebars": "^4.4.3",
     "handlebars-helpers": "^0.10.0",
     "mocha": "^6.2.0",
     "node-fetch": "^2.6.0",
@@ -105,8 +108,5 @@
     }
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "remap-istanbul": "^0.13.0"
-  }
+  "license": "ISC"
 }
