--- a/packages/generator/tsconfig.json
+++ b/packages/generator/tsconfig.json
@@ -1,25 +1,6 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "allowSyntheticDefaultImports": true,
-        "alwaysStrict": true,
-        "declaration": true,
-        "sourceMap": true,
-        "target": "ES6",
-        "esModuleInterop": true,
-        "declarationMap": true,
-        "forceConsistentCasingInFileNames":true,
-        "importHelpers": true,
-        "incremental": false,
-        "moduleResolution": "Node",
-        "noEmitOnError": true,
-        "noErrorTruncation": true,
-        "noImplicitReturns": true,
-        "noImplicitThis": true,
-        "preserveConstEnums": true
-        // "strict": true,
-        // "suppressImplicitAnyIndexErrors": true
-    },
+    "extends": "../../base.tsconfig.json",
+    
 
     // NOTE: Everything except what you want compiled into JS should be in the exclusions.
     "exclude": [
