--- a/packages/exchange-connector/tsconfig.json
+++ b/packages/exchange-connector/tsconfig.json
@@ -1,10 +1,13 @@
 {
     "extends": "../../base.tsconfig.json",
+    "compilerOptions": {
+        // "typeRoots": ["./types", "./node_modules/@types"],
+        "outDir": "./release",
+    },
     // NOTE: Everything except what you want compiled into JS should be in the exclusions.
     "exclude": [
         "node_modules",
-        "src",
         "test",
-        "gulpfile.ts"
+        "release"
     ]
 }
