--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.3",
+    "@types/chai-as-promised": "^7.1.2",
     "@types/fancy-log": "^1.3.1",
     "@types/fs-extra": "^8.0.0",
     "@types/gulp": "^4.0.6",
@@ -51,6 +52,7 @@
     "@typescript-eslint/parser": "^2.3.2",
     "amf-client-js": "^3.5.4",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "chai-string": "^1.5.0",
     "cross-env": "^5.2.0",
     "del": "^5.1.0",
