--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,15 +1,16 @@
 {
     "extends": "../../base.tsconfig.json",
-    // NOTE: Everything except what you want compiled into JS should be in the exclusions.    
     "compilerOptions": {
         "outDir": "./dist",
     },
+    // NOTE: Everything except what you want compiled into JS should be in the exclusions.
     "exclude": [
         "node_modules",
-        "gulpfile.ts",
-        "dist"
+        "release",
+        "test",
+        "gulpfile.ts"
     ],
     "include": [
-        "./renderedTemplates"
-      ]
+        "src"
+    ]
 }
