--- a/packages/exchange-connector/tsconfig.json
+++ b/packages/exchange-connector/tsconfig.json
@@ -1,13 +1,13 @@
 {
     "extends": "../../base.tsconfig.json",
     "compilerOptions": {
-        // "typeRoots": ["./types", "./node_modules/@types"],
-        "outDir": "./release",
+        "outDir": "./dist",
     },
     // NOTE: Everything except what you want compiled into JS should be in the exclusions.
     "exclude": [
         "node_modules",
         "test",
-        "release"
+        "release",
+        "dist"
     ]
 }
