Ka/auth for mule mock service (#40)
* Init commit for auth

* Initializing the bearer token and creating the header

* Merge with master

* Use relative path until dependencies are clear

* Change the dependency in test to relative path

* Updated root package.json

* Moved build before test

* fixed run typo for npm build

* Code review comments and build before test

* forMock to useMock

* Code review comments

* Return promise void and then resolve it

* Resolve promise in initialize method

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "@commerce-sdk/core": "file:packages/core",
     "@commerce-sdk/generator": "file:packages/generator",
-    "exchange-connector": "file:packages/exchange-connector"
+    "@commerce-sdk/exchange-connector": "file:packages/exchange-connector"
   },
   "devDependencies": {
     "@types/chai": "^4.2.3",
@@ -49,6 +49,7 @@
     "node-fetch": "^2.6.0",
     "nyc": "^14.1.1",
     "qs": "^6.9.0",
+    "sinon": "^7.5.0",
     "tmp": "^0.1.0",
     "ts-node": "^8.3.0",
     "typescript": "^3.6.4",
