--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -67,6 +67,10 @@
       ]
     }
   },
+  "devDependencies": {
+    "@commerce-sdk/exchange-connector" : "^1.0.1-alpha.0",
+    "dotenv": "^8.2.0"
+  },
   "author": "",
   "license": "ISC",
   "gitHead": "a1ce46a1a70e7ec09357bf8b6889a8d208a34063"
