--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -18,7 +18,7 @@
       "coverage",
       "test",
       "gulpfile.ts",
-      "generated-src"
+      "renderedTemplates"
     ],
     "reporter": [
       "html",
