--- a/packages/generator/tsconfig.json
+++ b/packages/generator/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "extends": "../../base.tsconfig.json",
-    // NOTE: Everything except what you want compiled into JS should be in the exclusions.    
+    // NOTE: Everything except what you want compiled into JS should be in the exclusions.
     "compilerOptions": {
-        "outDir": "./dist",
+        "outDir": "./dist"
     },
     "exclude": [
         "node_modules",
