Ja/client id auth (#47)
* Added support for client id auth

* Saving changes while testing something

* Updated to allow auth.  Still need to hook it up to the generated sdk

* Fixed generation and cleaned some other stuff up

* Updated to fix chai-as-promised

* Build should be working

* Please fix jenkins

* Please fix jenkins

* DFixed tests

* Addressed PR comments

--- a/packages/exchange-connector/package.json
+++ b/packages/exchange-connector/package.json
@@ -41,7 +41,7 @@
   },
   "scripts": {
     "pretest": "npm run lint",
-    "lint": "eslint \"**/*.{js,ts}\" --quiet --fix",
+    "lint": "eslint \"**/*.ts\" --quiet --fix",
     "build": "tsc",
     "test": "nyc cross-env TS_NODE_FILES=true mocha --exit --require ts-node/register --colors test/**/*.ts"
   },
