--- a/package.json
+++ b/package.json
@@ -2,32 +2,35 @@
   "name": "commerce-sdk",
   "private": true,
   "scripts": {
-    "postinstall": "lerna bootstrap --hoist && lerna link",
+    "postinstall": "lerna bootstrap --hoist",
     "test": "lerna run test",
     "build": "lerna run build"
   },
-  "dependencies": {
-    "@commerce-sdk/core": "file:packages/core",
-    "@commerce-sdk/generator": "file:packages/generator",
-    "@commerce-sdk/exchange-connector": "file:packages/exchange-connector"
-  },
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^0.1.3",
     "@types/chai": "^4.2.3",
+    "@types/chai-as-promised": "^7.1.2",
+    "@types/chai-spies": "^1.0.1",
     "@types/fancy-log": "^1.3.1",
     "@types/fetch-mock": "^7.3.1",
     "@types/fs-extra": "^8.0.0",
     "@types/gulp": "^4.0.6",
     "@types/gulp-debug": "^2.0.31",
     "@types/handlebars-helpers": "^0.5.2",
+    "@types/lodash": "^4.14.146",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.6.9",
     "@types/node-fetch": "^2.5.2",
     "@types/qs": "^6.5.3",
+    "@types/simple-oauth2": "^2.5.0",
+    "@types/sinon": "^7.5.0",
     "@types/tmp": "^0.1.0",
     "@typescript-eslint/eslint-plugin": "^2.3.2",
     "@typescript-eslint/parser": "^2.3.2",
     "amf-client-js": "^3.5.4",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "chai-spies": "^1.0.0",
     "chai-string": "^1.5.0",
     "cross-env": "^5.2.0",
     "cross-fetch": "^3.0.4",
@@ -44,16 +47,20 @@
     "gulp-typescript": "^5.0.1",
     "handlebars": "^4.4.3",
     "handlebars-helpers": "^0.10.0",
-    "lerna": "^3.18.3",
     "mocha": "^6.2.0",
     "node-fetch": "^2.6.0",
     "nyc": "^14.1.1",
     "qs": "^6.9.0",
+    "simple-oauth2": "^3.0.1",
     "sinon": "^7.5.0",
+    "source-map-support": "^0.5.16",
     "tmp": "^0.1.0",
-    "ts-node": "^8.3.0",
+    "ts-node": "^8.4.1",
     "typescript": "^3.6.4",
     "webapi-parser": "^0.3.2",
     "xo": "^0.25.3"
+  },
+  "dependencies": {
+    "lerna": "^3.18.4"
   }
 }
