--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,17 +8,15 @@
     "pretest": "npm run lint",
     "test": "nyc cross-env TS_NODE_FILES=true mocha --exit --require ts-node/register --colors test/**/*.ts",
     "build": "tsc",
-    "lint": "eslint \"**/*.{js,ts}\" --quiet --fix"
+    "lint": "eslint \"**/*.ts\" --quiet --fix"
   },
   "nyc": {
+    "extends": "@istanbuljs/nyc-config-typescript",
     "exclude": [
-      "release",
       "coverage",
       "dist",
       "test",
-      "gulpfile.ts",
-      "src/core/index.ts",
-      "src/utils/renderer.ts"
+      "src/core/index.ts"
     ],
     "reporter": [
       "html",
