--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,28 @@
+version: 2
+jobs:
+  build:
+    working_directory: ~/mern-starter
+    # The primary container is an instance of the first image listed. The job's commands run in this container.
+    docker:
+      - image: circleci/node:10.16.0
+    # The secondary container is an instance of the second listed image which is run in a common network where ports exposed on the primary container are available on localhost.
+    steps:
+      - checkout
+      - run:
+          name: Update npm
+          command: 'sudo npm install -g npm@latest'
+      - restore_cache:
+          key: dependency-cache-{{ checksum "package-lock.json" }}
 
-workflows:
-  version: 2
+      - save_cache:
+          key: dependency-cache-{{ checksum "package-lock.json" }}
+          paths:
+            - node_modules
   test:
     docker:
       - image: circleci/node:10.16.0
     steps:
       - checkout
-      - run :
-          name: Update npm
-          command: 'sudo npm install -g npm@latest'
-      - run:
-          name: Install npm wee
-          command: npm install
       - run:
           name: Install npm wee
           command: npm run build
@@ -21,3 +32,12 @@ workflows:
       - store_artifacts:
           path: coverage
           prefix: coverage
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - test:
+          requires:
+            - build
