--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,8 +31,7 @@ jobs:
           name: build
           command: npm test
       - store_artifacts:
-          path: coverage
-          prefix: coverage
+          path: packages/*/coverage
 
 workflows:
   version: 2
