Updated circle ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,6 @@
 version: 2
 jobs:
-  build:
-    # working_directory: ~/mern-starter
-    # The primary container is an instance of the first image listed. The job's commands run in this container.
-    docker:
-      - image: circleci/node:10.16.0
-    # The secondary container is an instance of the second listed image which is run in a common network where ports exposed on the primary container are available on localhost.
-
-    steps:
-      - checkout
-      - run:
-          name: Update npm
-          command: 'sudo npm install -g npm@latest'
-
-  test:
+  test10:
     docker:
       - image: circleci/node:10.16.0
     steps:
@@ -35,9 +22,6 @@ jobs:
 
 workflows:
   version: 2
-  build_and_test:
+  test:
     jobs:
-      - build
-      - test:
-          requires:
-            - build
+      - test
