Save build artifacts

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,11 @@ jobs:
           name: build
           command: npm test
       - store_artifacts:
-          path: packages/*/coverage
+          path: packages/core/coverage
+      - store_artifacts:
+          path: packages/exchange-connector/coverage
+      - store_artifacts:
+          path: packages/generator/coverage
 
 workflows:
   version: 2
