--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,3 +32,8 @@ jobs:
           name: Test application
           command: npm run test
 
+workflows:
+  version: 2
+  test:
+    jobs:
+      - test
