--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,39 +1,16 @@
-version: 2
 jobs:
-  test:
-    docker:
-      - image: circleci/node:10.16.0
-
-    working_directory: ~/repo
-
+  build:
+    executor:
+      name: node/default
+      tag: '10.16'
     steps:
       - checkout
-      - run:
-          name: Update NPM to the latest
-          command: "sudo npm install -g npm@latest"
+      - node/with-cache:
+          steps:
+            - run: npm install
+      - run: npm run build
+      - run: npm run test
+orbs:
+  node: circleci/node@1.1
+version: 2.1
 
-      - restore_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
-
-      - run:
-          name: Install dependencies
-          command: npm install
-
-      - save_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
-          paths:
-            - ./node_modules
-
-      - run:
-          name: Build application
-          command: npm run build
-
-      - run:
-          name: Test application
-          command: npm run test
-
-workflows:
-  version: 2
-  test:
-    jobs:
-      - test
