Ka/extract files (#48)
* Init commit for auth

* Initializing the bearer token and creating the header

* [jb/add-global-fetch-to-types]
- Add fix for GlobalFetch being removed in TS 3.6.2

* - Ignore types directory

* Added ability to unzip files

* Added reading entry files

* UPdated readme and package.json

* Changed to promise

* Updated to return full paths

* Added extract-files

* Merge with master

* Use relative path until dependencies are clear

* Change the dependency in test to relative path

* Updated root package.json

* Moved build before test

* fixed run typo for npm build

* Code review comments and build before test

* Just enough test cases, need code refactor to mock fs properly

* Basic tests for directory parser

* Negative tests with empty and invalid dir

* Test exchange.json file and additional test cases

* Removed async and PR comments

* PR comments

* PR comments2

--- a/packages/exchange-connector/package.json
+++ b/packages/exchange-connector/package.json
@@ -18,7 +18,8 @@
       "coverage",
       "test",
       "dist",
-      "src/exchangeDownloader.ts"
+      "src/exchangeDownloader.ts",
+      "types"
     ],
     "reporter": [
       "html",
@@ -78,7 +79,8 @@
     "@types/graphql": "^14.5.0",
     "apollo-boost": "^0.4.4",
     "dotenv": "^8.2.0",
-    "graphql-tag": "^2.10.1"
+    "graphql-tag": "^2.10.1",
+    "unzipper": "^0.10.5"
   },
   "gitHead": "a1ce46a1a70e7ec09357bf8b6889a8d208a34063"
 }
