Fixed trailing comma

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -74,5 +74,5 @@
   },
   "author": "",
   "license": "ISC",
-  "gitHead": "a1ce46a1a70e7ec09357bf8b6889a8d208a34063",
+  "gitHead": "a1ce46a1a70e7ec09357bf8b6889a8d208a34063"
 }
