Save test results in circleci

--- a/packages/exchange-connector/package.json
+++ b/packages/exchange-connector/package.json
@@ -44,7 +44,7 @@
     "pretest": "npm run lint",
     "lint": "eslint \"**/*.ts\" --quiet --fix",
     "build": "tsc",
-    "test": "nyc cross-env TS_NODE_FILES=true mocha --exit --require ts-node/register --colors test/**/*.ts"
+    "test": "nyc cross-env TS_NODE_FILES=true mocha --reporter=xunit --reporter-options output=../../reports/exchange-connector.xml --exit --require ts-node/register --colors test/**/*.ts"
   },
   "lint-staged": {
     "*.js": [
