Save test results in circleci (#9)
* Save test results in circleci

* Fix build

* Changed lerna to be a devDependency

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,8 @@ jobs:
             - run: npm install
       - run: npm run build
       - run: npm run test
+      - store_test_results:
+          path: reports
 orbs:
   node: circleci/node@1.1
 version: 2.1
