--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -66,8 +66,11 @@
     }
   },
   "devDependencies": {
-    "@commerce-sdk/exchange-connector" : "^1.0.1-alpha.0",
-    "dotenv": "^8.2.0"
+    "@commerce-sdk/exchange-connector": "^1.0.1-alpha.0",
+    "cross-env": "^6.0.3",
+    "dotenv": "^8.2.0",
+    "mocha": "^6.2.2",
+    "nyc": "^14.1.1"
   },
   "author": "",
   "license": "ISC",
