--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -70,6 +70,9 @@
   "author": "",
   "license": "ISC",
   "gitHead": "a1ce46a1a70e7ec09357bf8b6889a8d208a34063",
+  "devDependencies": {
+    "nyc": "^14.1.1"
+  },
   "dependencies": {
     "@commerce-sdk/core": "^0.0.2-alpha.0"
   }
