Add license and header plugin

--- a/packages/exchange-connector/package.json
+++ b/packages/exchange-connector/package.json
@@ -60,7 +60,8 @@
       "plugin:prettier/recommended"
     ],
     "plugins": [
-      "@typescript-eslint"
+      "@typescript-eslint",
+      "header"
     ],
     "parserOptions": {
       "ecmaVersion": 2018,
@@ -72,7 +73,18 @@
         {
           "prefixWithI": "always"
         }
-      ]
+      ],
+      "header/header": [2, "block", [
+        "",
+        {
+          "pattern": "^ \\* Copyright \\(c\\) \\d{4}, salesforce.com, inc\\.$",
+          "template": " * Copyright (c) 2019, salesforce.com, inc."
+        },
+        " * All rights reserved.",
+        " * SPDX-License-Identifier: BSD-3-Clause",
+        " * For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause",
+        " "
+      ]]
     }
   },
   "dependencies": {
