--- a/packages/generator/build-config.json
+++ b/packages/generator/build-config.json
@@ -3,7 +3,7 @@
   "files": [
       {
         "boundedContext": "shop",
-        "ramlFile": "raml/shop/site.raml"
+        "ramlFile": "test/raml/valid/site.raml"
       }
     ]
 }
