New npm script for integration test

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "postinstall": "lerna bootstrap --hoist",
     "test": "lerna run test",
-    "build": "lerna run build"
+    "build": "lerna run build",
+    "test:integration": "lerna run test:integration"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^0.1.3",
