--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "pretest": "npm run lint",
     "test": "nyc cross-env TS_NODE_FILES=true mocha --reporter=xunit --reporter-options output=../../reports/generator.xml  --exit --require ts-node/register --colors test/**/*.ts",
+    "test:integration": "npm run test",
     "start": "node dist/index.js",
     "clean": "gulp clean",
     "renderTemplates": "gulp renderTemplates",
@@ -15,6 +16,7 @@
   },
   "nyc": {
     "exclude": [
+      "integration",
       "coverage",
       "test",
       "gulpfile.ts",
