--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "pretest": "npm run lint",
     "test": "nyc cross-env TS_NODE_FILES=true mocha --reporter=xunit --reporter-options output=../../reports/generator.xml  --exit --require ts-node/register --colors test/**/*.ts",
+    "test:integration": "nyc --silent --check-coverage=false cross-env TS_NODE_FILES=true mocha --reporter=xunit --reporter-options output=../../reports_integration/generator.xml  --exit --require ts-node/register --colors test_integration/**/*.ts",
     "start": "node dist/index.js",
     "clean": "gulp clean",
     "renderTemplates": "gulp renderTemplates",
@@ -17,6 +18,7 @@
     "exclude": [
       "coverage",
       "test",
+      "test_integration",
       "gulpfile.ts",
       "renderedTemplates"
     ],
