Added integration test to CI steps

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
             - run: npm install
       - run: npm run build
       - run: npm run test
+      - run: npm run test:integration
       - store_test_results:
           path: reports
 orbs:
