Added simply gulp task

--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -85,7 +85,9 @@
   "license": "ISC",
   "gitHead": "a1ce46a1a70e7ec09357bf8b6889a8d208a34063",
   "devDependencies": {
-    "nyc": "^14.1.1"
+    "nyc": "^14.1.1",
+    "@commerce-sdk/exchange-connector": "^1.0.1-alpha.0",
+    "unzipper": "^0.10.5"
   },
   "dependencies": {
     "@commerce-sdk/core": "^0.0.2-alpha.0"
