--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -82,6 +82,7 @@
     "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
     "mocha": "^6.2.2",
+    "nock": "^11.7.0",
     "nyc": "^14.1.1"
   },
   "author": "",
