--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "handlebars": "^4.4.3",
     "handlebars-helpers": "^0.10.0",
     "lerna": "^3.18.4",
+    "make-fetch-happen": "^6.1.0",
     "mocha": "^6.2.0",
     "node-fetch": "^2.6.0",
     "nyc": "^14.1.1",
