Use caching interface

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -64,17 +64,21 @@
           "prefixWithI": "always"
         }
       ],
-      "header/header": [2, "block", [
-        "",
-        {
-          "pattern": "^ \\* Copyright \\(c\\) \\d{4}, salesforce.com, inc\\.$",
-          "template": " * Copyright (c) 2019, salesforce.com, inc."
-        },
-        " * All rights reserved.",
-        " * SPDX-License-Identifier: BSD-3-Clause",
-        " * For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause",
-        " "
-      ]]
+      "header/header": [
+        2,
+        "block",
+        [
+          "",
+          {
+            "pattern": "^ \\* Copyright \\(c\\) \\d{4}, salesforce.com, inc\\.$",
+            "template": " * Copyright (c) 2019, salesforce.com, inc."
+          },
+          " * All rights reserved.",
+          " * SPDX-License-Identifier: BSD-3-Clause",
+          " * For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause",
+          " "
+        ]
+      ]
     }
   },
   "devDependencies": {
@@ -87,5 +91,8 @@
   },
   "author": "",
   "license": "ISC",
-  "gitHead": "a1ce46a1a70e7ec09357bf8b6889a8d208a34063"
+  "gitHead": "a1ce46a1a70e7ec09357bf8b6889a8d208a34063",
+  "dependencies": {
+    "tmp": "~0.1.0"
+  }
 }
