Fixed all issues to actually build the SDK

--- a/packages/exchange-connector/package.json
+++ b/packages/exchange-connector/package.json
@@ -74,17 +74,21 @@
           "prefixWithI": "always"
         }
       ],
-      "header/header": [2, "block", [
-        "",
-        {
-          "pattern": "^ \\* Copyright \\(c\\) \\d{4}, salesforce.com, inc\\.$",
-          "template": " * Copyright (c) 2019, salesforce.com, inc."
-        },
-        " * All rights reserved.",
-        " * SPDX-License-Identifier: BSD-3-Clause",
-        " * For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause",
-        " "
-      ]]
+      "header/header": [
+        2,
+        "block",
+        [
+          "",
+          {
+            "pattern": "^ \\* Copyright \\(c\\) \\d{4}, salesforce.com, inc\\.$",
+            "template": " * Copyright (c) 2019, salesforce.com, inc."
+          },
+          " * All rights reserved.",
+          " * SPDX-License-Identifier: BSD-3-Clause",
+          " * For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause",
+          " "
+        ]
+      ]
     }
   },
   "dependencies": {
@@ -93,6 +97,13 @@
     "dotenv": "^8.2.0",
     "graphql-tag": "^2.10.1",
     "unzipper": "^0.10.5"
+  },
+  "devDependencies": {
+    "cross-env": "^6.0.3",
+    "dotenv": "^8.2.0",
+    "mocha": "^6.2.2",
+    "nock": "^11.7.0",
+    "nyc": "^14.1.1"
   },
   "gitHead": "a1ce46a1a70e7ec09357bf8b6889a8d208a34063"
 }
