Added tests for the new downloader

--- a/packages/exchange-connector/package.json
+++ b/packages/exchange-connector/package.json
@@ -18,7 +18,6 @@
       "coverage",
       "test",
       "dist",
-      "src/exchangeDownloader.ts",
       "types"
     ],
     "reporter": [
@@ -44,6 +43,7 @@
     "pretest": "npm run lint",
     "lint": "eslint \"**/*.ts\" --quiet --fix",
     "build": "tsc",
+    "test-local": "nyc cross-env TS_NODE_FILES=true mocha --exit --require ts-node/register --colors test/**/*.ts",
     "test": "nyc cross-env TS_NODE_FILES=true mocha --reporter=xunit --reporter-options output=../../reports/exchange-connector.xml --exit --require ts-node/register --colors test/**/*.ts"
   },
   "lint-staged": {
