--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -6,6 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "pretest": "npm run lint",
+    "test-local": "nyc cross-env TS_NODE_FILES=true mocha --exit --require ts-node/register --colors test/**/*.ts",
     "test": "nyc cross-env TS_NODE_FILES=true mocha --reporter=xunit --reporter-options output=../../reports/generator.xml  --exit --require ts-node/register --colors test/**/*.ts",
     "test:integration": "nyc --silent --check-coverage=false cross-env TS_NODE_FILES=true mocha --reporter=xunit --reporter-options output=../../reports_integration/generator.xml  --exit --require ts-node/register --colors test_integration/**/*.ts",
     "start": "node dist/index.js",
@@ -20,7 +21,8 @@
       "test",
       "test_integration",
       "gulpfile.ts",
-      "renderedTemplates"
+      "renderedTemplates",
+      "index.js"
     ],
     "reporter": [
       "html",
@@ -68,25 +70,31 @@
           "prefixWithI": "always"
         }
       ],
-      "header/header": [2, "block", [
-        "",
-        {
-          "pattern": "^ \\* Copyright \\(c\\) \\d{4}, salesforce.com, inc\\.$",
-          "template": " * Copyright (c) 2019, salesforce.com, inc."
-        },
-        " * All rights reserved.",
-        " * SPDX-License-Identifier: BSD-3-Clause",
-        " * For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause",
-        " "
-      ]]
+      "header/header": [
+        2,
+        "block",
+        [
+          "",
+          {
+            "pattern": "^ \\* Copyright \\(c\\) \\d{4}, salesforce.com, inc\\.$",
+            "template": " * Copyright (c) 2019, salesforce.com, inc."
+          },
+          " * All rights reserved.",
+          " * SPDX-License-Identifier: BSD-3-Clause",
+          " * For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause",
+          " "
+        ]
+      ]
     }
   },
   "author": "",
   "license": "ISC",
   "gitHead": "a1ce46a1a70e7ec09357bf8b6889a8d208a34063",
   "devDependencies": {
-    "nyc": "^14.1.1",
     "@commerce-sdk/exchange-connector": "^1.0.1-alpha.0",
+    "chai": "^4.2.0",
+    "cross-env": "^6.0.3",
+    "nyc": "^14.1.1",
     "unzipper": "^0.10.5"
   },
   "dependencies": {
