getting that integration test working

--- a/packages/generator/build-config.json
+++ b/packages/generator/build-config.json
@@ -1,5 +1,6 @@
 {
-  "tmpDir": "test/raml/valid/",
+  "inputDir": "test/raml/valid/",
+  "renderDir": "renderedTemplates",
   "files": [
       {
         "boundedContext": "shop",
