Updated to make the workflow work more nicely

--- a/packages/exchange-connector/package.json
+++ b/packages/exchange-connector/package.json
@@ -99,6 +99,7 @@
     "unzipper": "^0.10.5"
   },
   "devDependencies": {
+    "@types/unzipper": "^0.10.1",
     "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
     "mocha": "^6.2.2",
