--- a/packages/generator/build-config.json
+++ b/packages/generator/build-config.json
@@ -1,10 +1,6 @@
 {
   "inputDir": "test/raml/valid/",
   "renderDir": "renderedTemplates",
-  "files": [
-      {
-        "boundedContext": "shop",
-        "ramlFile": "test/raml/valid/site.raml"
-      }
-    ]
+  "exchangeCategory": "CC API Family",
+  "apiConfigFile": "api-config.json"
 }
