--- a/packages/exchange-connector/package.json
+++ b/packages/exchange-connector/package.json
@@ -43,8 +43,8 @@
     "pretest": "npm run lint",
     "lint": "eslint \"**/*.ts\" --quiet --fix",
     "build": "tsc",
-    "test-local": "nyc cross-env TS_NODE_FILES=true mocha --exit --require ts-node/register --colors test/**/*.ts",
-    "test": "nyc cross-env TS_NODE_FILES=true mocha --reporter=xunit --reporter-options output=../../reports/exchange-connector.xml --exit --require ts-node/register --colors test/**/*.ts"
+    "test-local": "nyc cross-env TS_NODE_FILES=true mocha --require ts-node/register --colors test/**/*.test.ts",
+    "test": "nyc cross-env TS_NODE_FILES=true mocha --reporter=xunit --reporter-options output=../../reports/exchange-connector.xml --exit --require ts-node/register --colors test/**/*.test.ts"
   },
   "lint-staged": {
     "*.js": [
