Addressed more PR comments

--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "pretest": "npm run lint",
-    "test-local": "nyc cross-env TS_NODE_FILES=true mocha --exit --require ts-node/register --colors test/**/*.ts",
+    "test:debug": "nyc cross-env TS_NODE_FILES=true mocha --exit --require ts-node/register --colors test/**/*.ts",
     "test": "nyc cross-env TS_NODE_FILES=true mocha --reporter=xunit --reporter-options output=../../reports/generator.xml  --exit --require ts-node/register --colors test/**/*.ts",
     "test:integration": "nyc --silent --check-coverage=false cross-env TS_NODE_FILES=true mocha --reporter=xunit --reporter-options output=../../reports_integration/generator.xml  --exit --require ts-node/register --colors test_integration/**/*.ts",
     "start": "node dist/index.js",
