Ja/get raml.w 6989691 (#41)
* Fixed all issues to actually build the SDK

* Added tests for the new downloader

* Fixed tests

* Updated with tests to hopefully pass circle

* Still working on fixing tests, then will cleanup process

* getting that integration test working

* Removed junk files

* Updated to make the workflow work more nicely

* Addressing some PR comments

* Addressed more PR comments

* Addressed PR comments

* Updated from comments

* Just using

* Addressed other comments

--- a/packages/generator/build-config.json
+++ b/packages/generator/build-config.json
@@ -1,9 +1,6 @@
 {
-  "tmpDir": "renderedTemplates",
-  "files": [
-      {
-        "boundedContext": "shop",
-        "ramlFile": "test/raml/valid/site.raml"
-      }
-    ]
+  "inputDir": "test/raml/valid/",
+  "renderDir": "renderedTemplates",
+  "exchangeCategory": "CC API Family",
+  "apiConfigFile": "api-config.json"
 }
