--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,6 +10,9 @@
     "build": "tsc",
     "lint": "eslint \"**/*.ts\" --quiet --fix"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript",
     "exclude": [
@@ -88,7 +91,7 @@
   },
   "author": "",
   "license": "ISC",
-  "gitHead": "f685c47dd053a772341c3b0b5991edde5681fbad",
+  "gitHead": "e9c8a2ab1917b65d66177ace22c42ad64613277b",
   "dependencies": {
     "tmp": "~0.1.0"
   }
