--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -15,6 +15,9 @@
     "build": "npm run renderTemplates && tsc",
     "lint": "eslint \"**/*.ts\" --quiet --fix"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "nyc": {
     "exclude": [
       "coverage",
@@ -86,7 +89,7 @@
   },
   "author": "",
   "license": "ISC",
-  "gitHead": "f685c47dd053a772341c3b0b5991edde5681fbad",
+  "gitHead": "e9c8a2ab1917b65d66177ace22c42ad64613277b",
   "devDependencies": {
     "@commerce-sdk/exchange-connector": "^1.0.4-alpha.0",
     "chai": "^4.2.0",
