--- a/packages/exchange-connector/package.json
+++ b/packages/exchange-connector/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@commerce-sdk/exchange-connector",
-  "version": "1.0.4-alpha.0",
+  "version": "1.0.3-alpha.0",
   "description": "Downloads raml specs from exchange",
   "author": "Jeff Albert <jalbert@salesforce.com>",
   "homepage": "",
@@ -10,6 +10,9 @@
   "files": [
     "dist"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "nyc": {
     "exclude": [
       "coverage",
