--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@commerce-sdk/core",
+  "name": "@commerce-apps/core",
   "version": "0.0.7-alpha.0",
   "description": "Commerce SDK Generator, contains the templates to generate the SDK",
   "main": "dist/index.js",
@@ -91,7 +91,7 @@
   },
   "author": "",
   "license": "ISC",
-  "gitHead": "e9c8a2ab1917b65d66177ace22c42ad64613277b",
+  "gitHead": "856b2a56f08d508ac7ddb39a9051c87e1b3d5629",
   "dependencies": {
     "tmp": "~0.1.0"
   }
