--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -1,7 +1,7 @@
 {
   "name": "commerce-sdk",
   "version": "0.0.7-alpha.0",
-  "description": "Commerce SDK Generator, contains the templates to generate the SDK",
+  "description": "Commerce Cloud SDK",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -89,7 +89,7 @@
   },
   "author": "",
   "license": "ISC",
-  "gitHead": "e9c8a2ab1917b65d66177ace22c42ad64613277b",
+  "gitHead": "856b2a56f08d508ac7ddb39a9051c87e1b3d5629",
   "devDependencies": {
     "@commerce-sdk/exchange-connector": "^1.0.5-alpha.0",
     "chai": "^4.2.0",
