Updated for name. Tomorrow will change back

--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "commerce-sdk",
+  "name": "@commerce-app/commerce-sdk",
   "version": "0.0.8-alpha.0",
   "description": "Commerce Cloud SDK",
   "main": "dist/index.js",
@@ -89,7 +89,7 @@
   },
   "author": "",
   "license": "ISC",
-  "gitHead": "856b2a56f08d508ac7ddb39a9051c87e1b3d5629",
+  "gitHead": "89be9163d07f449bd45213940889da8455cb21d7",
   "devDependencies": {
     "@commerce-sdk/exchange-connector": "^1.0.5-alpha.0",
     "chai": "^4.2.0",
