--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -91,13 +91,13 @@
   "license": "ISC",
   "gitHead": "f99255fced226ec4a43e60f4dc469eee028d8a81",
   "devDependencies": {
-    "@commerce-sdk/exchange-connector": "^1.0.5-alpha.0",
+    "@commerce-apps/exchange-connector": "^1.0.8-alpha.0",
     "chai": "^4.2.0",
     "cross-env": "^6.0.3",
     "nyc": "^14.1.1",
     "unzipper": "^0.10.5"
   },
   "dependencies": {
-    "@commerce-sdk/core": "^0.0.7-alpha.0"
+    "@commerce-apps/core": "^0.0.10-alpha.0"
   }
 }
