Updated to package up needed dependencies

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -93,6 +93,7 @@
   "license": "ISC",
   "gitHead": "f99255fced226ec4a43e60f4dc469eee028d8a81",
   "dependencies": {
+    "simple-oauth2": "^3.1.0",
     "tmp": "~0.1.0"
   }
 }
