--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "build": "lerna run build",
     "test:integration": "lerna run test:integration"
   },
+  "dependencies": {
+    "cross-fetch": "^3.0.4",
+    "fs-extra": "^8.1.0",
+    "make-fetch-happen": "^6.1.0"
+  },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^0.1.3",
     "@types/chai": "^4.2.3",
@@ -34,7 +39,6 @@
     "chai-spies": "^1.0.0",
     "chai-string": "^1.5.0",
     "cross-env": "^5.2.0",
-    "cross-fetch": "^3.0.4",
     "del": "^5.1.0",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.4.0",
@@ -43,19 +47,16 @@
     "eslint-plugin-header": "^3.0.0",
     "fancy-log": "^1.3.3",
     "fetch-mock": "^7.4.0",
-    "fs-extra": "^8.1.0",
     "gulp": "^4.0.2",
     "gulp-debug": "^4.0.0",
     "gulp-typescript": "^5.0.1",
     "handlebars": "^4.4.3",
     "handlebars-helpers": "^0.10.0",
     "lerna": "^3.18.4",
-    "make-fetch-happen": "^6.1.0",
     "mocha": "^6.2.0",
     "node-fetch": "^2.6.0",
     "nyc": "^14.1.1",
     "qs": "^6.9.0",
-    "simple-oauth2": "^3.0.1",
     "sinon": "^7.5.0",
     "source-map-support": "^0.5.16",
     "tmp": "^0.1.0",
