--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,6 +10,7 @@
     "build": "tsc",
     "lint": "eslint \"**/*.ts\" --quiet --fix"
   },
+  "files": ["dist"],
   "publishConfig": {
     "access": "public"
   },
