--- a/packages/exchange-connector/package.json
+++ b/packages/exchange-connector/package.json
@@ -94,6 +94,7 @@
   "dependencies": {
     "@types/graphql": "^14.5.0",
     "apollo-boost": "^0.4.4",
+    "cross-fetch": "^3.0.4",
     "dotenv": "^8.2.0",
     "graphql-tag": "^2.10.1",
     "unzipper": "^0.10.5"
