--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -4,6 +4,7 @@
   "description": "Commerce Cloud SDK",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": ["dist"],
   "scripts": {
     "pretest": "npm run lint",
     "test:debug": "nyc cross-env TS_NODE_FILES=true mocha --exit --require ts-node/register --colors test/**/*.ts",
